[package]
name = "dnsl"
version = "1.1.0"
authors = ["myl7 <myl.ustc@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tokio = { version = "0.3", features = ["full"] }
quick-error = "2"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
pcap-parser = "0.9"
